# concordium-web3id

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: check.yaml  release-concordia-verifier.yml  release-issuer-frontend.yml  release-proof-explorer.yml  release-test-issuer-frontend-docker.yml  release-web3id-verifier.yml  test-issuer-frontend-docker.yml  yarn-audit.yml
examples/bots/discord-bot/: CHANGELOG.md  Cargo.toml  README.md
examples/bots/discord-bot/scripts/: build.Dockerfile
examples/bots/discord-bot/src/: main.rs
examples/bots/telegram-bot/: CHANGELOG.md  Cargo.toml  README.md
examples/bots/telegram-bot/scripts/: build.Dockerfile
examples/bots/telegram-bot/src/: main.rs
examples/json-schemas/: README.md
examples/json-schemas/education-certificate/: JsonSchema2023-education-certificate.json  education-certivicate.vc.json
examples/json-schemas/metadata/: credential-metadata.json
examples/some-issuer/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/some-issuer/frontend/: .eslintrc.cjs  .prettierignore  README.md  config.json  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
examples/some-issuer/frontend/public/: index.html
examples/some-issuer/frontend/public/discord-oauth2/: index.html
examples/some-issuer/frontend/src/: App.css  App.tsx  discord.tsx  main.tsx  telegram.tsx
examples/some-issuer/frontend/src/@types/react-telegram-login/: index.d.ts
examples/some-issuer/frontend/src/components/: App.tsx
examples/some-issuer/frontend/src/discord/: App.tsx  types.ts
examples/some-issuer/frontend/src/discord/App/: App.tsx  _App.scss
examples/some-issuer/frontend/src/scss/: App.scss  _bootstrap-config.scss  _components.scss  _layout.scss  discord.scss
examples/some-issuer/frontend/src/scss/layout/: _root.scss  _toasts.scss
examples/some-issuer/frontend/src/shared/: Main.tsx  app-state.ts  connect.ts  types.ts  util.ts
examples/some-issuer/frontend/src/shared/Layout/: Layout.scss  Layout.tsx  _Layout.scss
examples/some-issuer/frontend/src/shared/StatusToast/: StatusToast.tsx  _StatusToast.scss  index.ts
examples/some-issuer/frontend/src/telegram/: App.tsx  types.ts
examples/some-issuer/frontend/src/types/: global.d.ts  react-telegram-login.d.ts
examples/some-issuer/json-schemas/: JsonSchema2023-some.json  credential-metadata.json
examples/some-issuer/json-schemas/discord/: JsonSchema2023-discord.json  credential-metadata.json
examples/some-issuer/json-schemas/telegram/: JsonSchema2023-telegram.json  credential-metadata.json
examples/some-issuer/scripts/: build.Dockerfile
examples/some-issuer/src/: discord.rs  issuer.rs  lib.rs  main.rs  telegram.rs
examples/some-issuer/templates/: discord-oauth.hbs
examples/some-verifier/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/some-verifier-lib/: CHANGELOG.md  Cargo.toml
examples/some-verifier/frontend/: .eslintrc.cjs  README.md  config.json  index.html  package-lock.json  package.json  vite.config.ts
examples/some-verifier/frontend/src/@types/: global.d.ts
examples/some-verifier/frontend/src/@types/react-telegram-login/: index.d.ts
examples/some-verifier/frontend/src/components/: App.tsx  Issuer.tsx  RemoveVerification.tsx  Verify.tsx  util.ts
examples/some-verifier/frontend/src/lib/: app-state.ts  types.ts  util.ts
examples/some-verifier/frontend/src/scss/: App.scss  Issuer.scss  _bootstrap-config.scss  _bootstrap-variables.scss  _components.scss  _config.scss  _layout.scss  index.scss
examples/some-verifier/frontend/src/scss/components/: _App.scss  _Issuer.scss
examples/some-verifier/frontend/src/scss/config/: _colors.scss
examples/some-verifier/frontend/src/scss/layout/: _accordion.scss  _btn.scss
examples/some-verifier/resources/: schema.sql
examples/some-verifier/scripts/: build.Dockerfile
examples/some-verifier/src/: db.rs  lib.rs  main.rs
issuer-front-end/: CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  esbuild.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
issuer-front-end/src/: CreateSchemaAndMetadataFiles.tsx  DeployCredentialContract.tsx  Main.tsx  Root.tsx  SelectNetwork.tsx  constants.ts  index.css  index.tsx  reading_from_blockchain.ts  writing_to_blockchain.ts
json-schemas/education-certificate/: JsonSchema2023-education-certificate.json  education-certivicate.vc.json
services/web3id-issuer/: CHANGELOG.md  Cargo.toml  README.md
services/web3id-issuer/scripts/: Dockerfile  build.Dockerfile  web3id-issuer.Jenkinsfile
services/web3id-issuer/src/: lib.rs  main.rs
services/web3id-verifier/: CHANGELOG.md  Cargo.toml  README.md
services/web3id-verifier-ts/: .eslintrc.cjs  README.md  package.json  vite.config.ts
services/web3id-verifier/scripts/: build.Dockerfile  web3id-verifier.Jenkinsfile
services/web3id-verifier/src/: configuration.rs  lib.rs  logging.rs  main.rs  model.rs  service.rs
services/web3id-verifier/src/routes/: mod.rs  monitoring.rs  presentation_verification.rs
services/web3id-verifier/tests/: integration_test.rs
services/web3id-verifier/tests/integration_test_helpers/: mod.rs  node_mock.rs  rest_client.rs  server.rs
services/web3id-verifier/tests/integration_test_monitoring/: health_check.rs  mod.rs
test-tools/issuer-front-end/: .eslintrc.js  CHANGELOG.md  Dockerfile  README.md  esbuild.config.ts  index.html  package.json  vite-env.d.ts  vite.config.ts
test-tools/issuer-front-end/backend/: Cargo.toml  README.md
test-tools/issuer-front-end/backend/src/: main.rs
test-tools/proof-explorer/: .eslintignore  CHANGELOG.md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
test-tools/test-issuer-backend/: Cargo.toml  README.md
test-tools/test-issuer-backend/src/: main.rs
test-tools/web3id-test/: CHANGELOG.md  Cargo.toml  README.md
test-tools/web3id-test/src/: lib.rs  main.rs
web3id-verifier/: Cargo.toml  README.md
web3id-verifier/scripts/: Dockerfile  web3id-verifier.Jenkinsfile
web3id-verifier/src/: main.rs
(+30 files in other folders)
