[workspace]
resolver = "2"

members = [
   "services/web3id-issuer",
   "services/web3id-verifier",
   "examples/some-issuer",
   "examples/some-verifier",
   "examples/some-verifier-lib",
   "examples/bots/discord-bot",
   "examples/bots/telegram-bot",
]

# Exclude crates in submodules
exclude = ["deps"]

[workspace.dependencies]
anyhow = "1.0"
axum = "0.6"
axum-macros = "0.3"
axum-prometheus = "0.4"
axum-sessions = "0.5"
chrono = "0.4.26"
clap = "4.3"
concordium-rust-sdk = { path = "deps/concordium-rust-sdk" }
concordium_base = { path = "deps/concordium-rust-sdk/concordium-base/rust-src/concordium_base" }
deadpool-postgres = "0.10"
futures = "0.3"
handlebars = "4.3"
hex = "0.4"
hmac = "0.12"
http = "0.2"
poise = "0.5"
rand = "0.8"
reqwest = "0.11"
serde = "1.0.173"
serde_json = "1.0"
sha2 = "0.10"
some-verifier-lib = { path = "examples/some-verifier-lib" }
serde_urlencoded = "0.7"
thiserror = "1.0.40"
tokio = "1.29"
tokio-postgres = "0.7"
tonic = "0.12"
tower-http = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4.1"