[package]
name = "web3id-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["tracing"] }
axum-prometheus = "0.3.3"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3", features = ["env", "derive"] }
concordium-rust-sdk = { version = "2.4.0", path = "../deps/concordium-rust-sdk" }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8", features = ["tls", "tls-roots"] }
tower-http = { version = "0.4", features = ["trace", "limit", "cors", "timeout"] }
tracing = "0.1"
tracing-subscriber = "0.3"
