[package]
name = "some-issuer"
version = "1.0.3"
edition = "2021"


[dependencies]
anyhow = "1.0"
axum = "0.6"
axum-sessions = "0.5"
clap = { version = "4.3", features = ["derive", "env"] }
hex = "0.4"
hmac = "0.12"
rand = { version = "0.8" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.10"
tokio = { version = "1.29", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.4", features = [
  "trace",
  "limit",
  "cors",
  "timeout",
  "fs",
  "compression-br",
  "compression-zstd",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
concordium-rust-sdk = { path = "../../deps/concordium-rust-sdk" }
http = "0.2"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
handlebars = "4.3"
futures = "0.3"
thiserror = "1.0"
axum-prometheus = "0.4"
