[package]
name = "some-issuer"
version = "1.0.3"
edition = "2021"


[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-sessions.workspace = true
clap = { workspace = true, features = ["env", "derive"] }
hex.workspace = true
hmac.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { workspace = true, features = [  "trace",
  "limit",
  "cors",
  "timeout",
  "fs",
  "compression-br",
  "compression-zstd",] }
tracing.workspace = true
tracing-subscriber.workspace = true
concordium-rust-sdk.workspace = true
http.workspace = true
tonic = { workspace = true, features = ["tls", "tls-roots"] }
handlebars.workspace = true
futures.workspace = true
thiserror.workspace = true
axum-prometheus.workspace = true
