[package]
name = "some-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.18"
clap = { version = "4.3.12", features = ["derive", "env"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
concordium-rust-sdk = { version = "*", path = "../../deps/concordium-rust-sdk" }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.28"
axum-macros = "0.3.8"
reqwest = { version = "0.11.18", features = ["json"] }
rust-tdlib = "0.4.3"
some-verifier-lib = { version = "*", path = "../some-verifier-lib" }
tower-http = { version = "0.4.3", features = ["fs"] }
