[package]
name = "some-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6"
clap = { version = "4.3", features = ["derive", "env"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["rt-multi-thread", "macros", "signal"] }
tokio-postgres = { version = "0.7", features = [
  "with-serde_json-1",
  "array-impls",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
concordium-rust-sdk = { version = "*", path = "../../deps/concordium-rust-sdk" }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
axum-macros = "0.3"
reqwest = { version = "0.11", features = ["json"] }
some-verifier-lib = { version = "*", path = "../some-verifier-lib" }
tower-http = { version = "0.4", features = ["trace", "limit", "cors", "timeout", "fs", "compression-br", "compression-zstd"] }
http = "0.2"
tonic = { version = "0.8", features = ["tls-roots", "tls"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
deadpool-postgres = "0.10.5"
