[package]
name = "some-verifier"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap = { workspace = true, features = ["env", "derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { workspace = true, features = [
  "with-serde_json-1",
  "array-impls",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
concordium-rust-sdk.workspace = true
serde = { workspace = true, features = ["derive"] }
futures.workspace = true
axum-macros.workspace = true
reqwest = { workspace = true, features = ["json"] }
some-verifier-lib = { version = "*", path = "../some-verifier-lib" }
tower-http = { workspace = true, features = [
  "trace",
  "limit",
  "cors",
  "timeout",
  "fs",
  "compression-br",
  "compression-zstd",
] }
http.workspace = true
tonic = { workspace = true, features = ["tls", "tls-roots"] }
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
sha2.workspace = true
deadpool-postgres.workspace = true
handlebars.workspace = true
url = { workspace = true, features = ["serde"] }
