[package]
name = "web3id-test"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.24"
clap = { version = "4.3", features = ["derive", "env"] }
concordium-rust-sdk = { version = "*", path = "../../deps/concordium-rust-sdk" }
web3id-issuer = { version = "*", path = "../../services/web3id-issuer/" }
hex = "0.4"
key_derivation = { version = "*", path = "../../deps/concordium-rust-sdk/concordium-base/rust-src/key_derivation" }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["rt-multi-thread", "time"] }
url = "2.3.1"
