[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive", "env"] }
poise = "0.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
some-verifier-lib = { version = "*", path = "../../some-verifier-lib" }
