[package]
name = "telegram-bot"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need the fix from https://github.com/teloxide/teloxide/pull/1002
teloxide = { git = "https://github.com/teloxide/teloxide.git", rev = "9c70cc4", features = [
    "macros",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
some-verifier-lib = { version = "*", path = "../../some-verifier-lib" }
concordium-rust-sdk = { version = "*", path = "../../../deps/concordium-rust-sdk" }
