[package]
name = "telegram-bot"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need the fix from https://github.com/teloxide/teloxide/pull/1002
teloxide = { git = "https://github.com/teloxide/teloxide.git", rev = "9c70cc4", features = [
    "macros",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
some-verifier-lib.workspace = true
concordium-rust-sdk.workspace = true
