[package]
name = "test-issuer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
concordium-rust-sdk = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }
thiserror = { workspace = true }
axum = { workspace = true, features = ["tracing"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tower-http = { workspace = true, features = ["trace", "limit", "cors", "timeout", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand_chacha = "0.3"
sha2 = { workspace = true }
